# ulam-leapers

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/uls/: README.md  uls.ksy
docs/uls/samples/: 2,2_vs_3,0.uls  8_players_no_attacks.uls  abstract.uls  cool.uls  empty.uls  two_knights.uls
src/: compression.rs  coords.rs  grid.rs  gui.rs  io.rs  lib.rs  main.rs  piece.rs  simulation.rs
src/algo/: mod.rs  morton.rs  transpose.rs
src/algo/bit_transpose/: avx2.rs  avx512bw.rs  dispatch.rs  sse2.rs
src/collections/: aligned_boxed_slice.rs  array2d.rs  mod.rs  sliding_window.rs
src/compression/: mod.rs  rle.rs  zstd.rs
src/compression/inspect/: mod.rs  zstd.rs
src/game/: chunk.rs  chunker.rs  grid.rs  mod.rs  piece.rs  sampler.rs  simulation.rs
src/game/persist/: mod.rs  uls.rs
src/gui/: app.rs  conv.rs  grid_explorer.rs  grid_render.rs  mod.rs  simulation_creator.rs  simulation_resumer.rs  simulation_runner.rs  subwindow.rs  util.rs
src/gui/grid_render/: canvas.rs  mod.rs  projection.rs  render.rs  samplers.rs
src/gui/render/: grid_canvas.rs  grid_projection.rs  grid_render.rs  mod.rs  samplers.rs
src/gui/widgets/: leaper_attacks.rs  misc.rs  mod.rs  player_colors.rs  player_relations.rs  simulation_config.rs  simulation_info.rs  simulation_limits.rs  widget.rs
src/math/: color.rs  coords.rs  mod.rs  pow2.rs  projection.rs  rect.rs  ulam.rs  zoom.rs
src/util/: align.rs  bitstream.rs  blit.rs  bytestream.rs  cache.rs  cancel.rs  constraint.rs  json.rs  memory.rs  mod.rs  pow2.rs  sync.rs  time.rs
