[package]
name = "ulam-leapers"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Sopel97/ulam-leapers"
license = "The Unlicense"
license-file = "LICENSE"

[dependencies]
eframe = "0.34.2"
rayon = "1.12.0"
zstd = "0.13.3"
rfd = "0.17.2"
serde_json = "1.0.150"
png = "0.18.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
