[package]
name = "ulam-leapers"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Sopel97/ulam-leapers"
description = "Simulator for generalizations of https://oeis.org/A392177."
license = "The Unlicense"
license-file = "LICENSE"
include = ["/assets", "/src", "/docs/uls/README.md", "/docs/uls/uls.ksy", "/docs/uls/uls.svg", "LICENSE", "README.md", "Cargo.toml"]

[dependencies]
eframe = "0.34.2"
rayon = "1.12.0"
zstd = "0.13.3"
rfd = "0.17.2"
serde_json = "1.0.150"
png = "0.18.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
